# semsel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build-package.yml  test-package.yml
docs/source/: conf.py  getting-started.rst  index.rst  semsel.rst
src/semsel/: __init__.py  __version__.py  exceptions.py  parser.py  selector.py  utils.py  version.py
tasks/: CHANGELOG.rst.jinja2  __init__.py  package.py
tests/: __init__.py  strategies.py  test_package.py  test_parser.py  test_pytest.py  test_transformer.py  test_version_condition.py
